--- a/index.html
+++ b/index.html
@@ -9,22 +9,31 @@
     <title>MD ARIF HASAN::TADA</title>
     <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="wrapper">
+        <div id="go-up">
+            <i class="fas fa-arrow-circle-up"></i>
+        </div>
         <div id="home">
             <div class="header-wrapper">
                 <div class="header">
                     <div class="header-logo">
-                        <span class="brand-name">Arif Hasan</span>
+                       <a href="/"> <span class="brand-name">Arif Hasan</span></a>
                     </div>
                     <nav class="header-navigation">
                         <ul>
-                            <li class="nav-home">Home</li>
-                            <li class="nav-about">About</li>
-                            <li class="nav-projects">Projects</li>
+                            <a href="#home">
+                                <li class="nav-home">Home</li>
+                            </a>
+                            <a href="#projects">
+                                <li class="nav-projects">Projects</li>
+                            </a>
                             <li class="nav-resume">Resume</li>
                             <li class="nav-contact">Contact</li>
                         </ul>
@@ -49,15 +58,66 @@
                     </p>
                     <p>SQL Server, Oracle and C#. Also, I am good at JavaScript and React framework. </p>
                 </div>
-                <a href="#projects"><div class="project-button">Discover my work</div></a>
+                <div id="project-button">Discover my work</div>
             </div>
         </div>
         <div id="projects">
-            <div class="project">
-                <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+            <div id="project-header" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="1000">
+                <h2>Selected Projects</h2>
+                <h4>Hover over the cards to learn more about projects</h4>
+            </div>
+            <div class="glide">
+                <div class="glide__track" data-glide-el="track">
+                    <ul class="glide__slides">
+                        <li class="glide__slide" data-aos="fade-up" data-aos-delay="50" data-aos-easing="ease-in-out">
+                            <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                        </li>
+                        <li class="glide__slide" data-aos="fade-up" data-aos-delay="250" data-aos-easing="ease-in-out">
+                            <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                        </li>
+                        <li class="glide__slide " data-aos="fade-up" data-aos-delay="450" data-aos-easing="ease-in-out">
+                            <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                        </li>
+                        <li class="glide__slide " data-aos="fade-up" data-aos-delay="550" data-aos-easing="ease-in-out">
+                            <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                        </li>
+
+                    </ul>
+                </div>
+                <div class="glide__arrows" data-glide-el="controls">
+                    <button class="glide__arrow glide__arrow--left" data-glide-dir="<"><i
+                            class="fas fa-arrow-circle-left"></i></button>
+                    <button class="glide__arrow glide__arrow--right" data-glide-dir=">"><i
+                            class="fas fa-arrow-circle-right"></i></button>
+                </div>
+                <div class="slider__bullets glide__bullets" data-glide-el="controls[nav]">
+
+                    <button class="slider__bullet glide__bullet glide__bullet--active" data-glide-dir="=0"></button>
+
+                    <button class="slider__bullet glide__bullet" data-glide-dir="=1"></button>
+
+                    <button class="slider__bullet glide__bullet" data-glide-dir="=2"></button>
+
+                    <button class="slider__bullet glide__bullet" data-glide-dir="=3"></button>
+
+                    <button class="slider__bullet glide__bullet" data-glide-dir="=4"></button>
+                </div>
             </div>
         </div>
+        <div id="contact">
+            <div class="contact-form" data-aos="fade-up" data-aos-delay="50" data-aos-easing="ease-in-out">
+                <h3>message me</h3>
+                <input type="text" name="username" id="username" placeholder="NAME">
+                <input type="text" name="email" id="email" placeholder="EMAIL">
+                <input type="text" name="message" id="message" id ="message" placeholder="MESSAGE">
+                <div id="send-message">SEND</div>
+            </div>
+        </div>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script src="https://kit.fontawesome.com/6f955fdec6.js"></script>
+        <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
+        <script src="/js/zenscroll-min.js"></script>
+        <script src="./js/site.js"></script>
 </body>
-<script src="./js/site.js"></script>
 
 </html>
