--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>MD ARIF HASAN::TADA</title>
+    <title>MD ARIF HASAN || ACTIVELY LOOKING FOR FULL TIME JOB &#x1F60E </title>
     <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
@@ -34,8 +34,12 @@
                             <a href="#projects">
                                 <li class="nav-projects">Projects</li>
                             </a>
+                            <a href="https://docs.google.com/document/d/1PSvy8psqVuQWScUHC7D53DqYqzqeIjaxG6acbGlFNQ4/edit?usp=sharing">
                             <li class="nav-resume">Resume</li>
+                        </a>
+                            <a href="#contact">
                             <li class="nav-contact">Contact</li>
+                            </a>
                         </ul>
                     </nav>
                 </div>
