added image border

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>MD ARIF HASAN || ACTIVELY LOOKING FOR FULL TIME JOB &#x1F60E </title>
+    <title>MD ARIF HASAN || ACTIVELY LOOKING FOR A FULL TIME JOB &#x1F60E </title>
     <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
@@ -60,7 +60,7 @@
                     <p>
                         I'm a junior software developer. I specialize on .NET technologies using ASP.NET MVC,
                     </p>
-                    <p>SQL Server, Oracle and C#. Also, I am good at JavaScript and React framework. </p>
+                    <p>SQL Server, Oracle and C#. Also, I am good at JavaScript, JQuery and React framework. </p>
                 </div>
                 <div id="project-button">Discover my work</div>
             </div>
@@ -74,16 +74,24 @@
                 <div class="glide__track" data-glide-el="track">
                     <ul class="glide__slides">
                         <li class="glide__slide" data-aos="fade-up" data-aos-delay="50" data-aos-easing="ease-in-out">
-                            <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                           <div class="image-frame">
+                               <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                            </div>
                         </li>
                         <li class="glide__slide" data-aos="fade-up" data-aos-delay="250" data-aos-easing="ease-in-out">
-                            <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                          <div class="image-frame">
+                              <img src="./img/react-cart.png" alt="react-cart">
+                            </div>
                         </li>
                         <li class="glide__slide " data-aos="fade-up" data-aos-delay="450" data-aos-easing="ease-in-out">
-                            <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                           <div class="image-frame">
+                               <img src="./img/react-movie.png" alt="react-movie">
+                            </div>
                         </li>
                         <li class="glide__slide " data-aos="fade-up" data-aos-delay="550" data-aos-easing="ease-in-out">
-                            <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                            <div class="image-frame">
+                                <img src="./img/react-library.png" alt="memory-game" class="memory-game">
+                            </div>
                         </li>
 
                     </ul>
