added animation on this website

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="header-wrapper">
                 <div class="header">
                     <div class="header-logo">
-                       <a href="/"> <span class="brand-name">Arif Hasan</span></a>
+                        <a href="/"> <span class="brand-name">Arif Hasan</span></a>
                     </div>
                     <nav class="header-navigation">
                         <ul>
@@ -34,11 +34,12 @@
                             <a href="#projects">
                                 <li class="nav-projects">Projects</li>
                             </a>
-                            <a href="https://docs.google.com/document/d/1PSvy8psqVuQWScUHC7D53DqYqzqeIjaxG6acbGlFNQ4/edit?usp=sharing">
-                            <li class="nav-resume">Resume</li>
-                        </a>
+                            <a
+                                href="https://docs.google.com/document/d/1PSvy8psqVuQWScUHC7D53DqYqzqeIjaxG6acbGlFNQ4/edit?usp=sharing">
+                                <li class="nav-resume">Resume</li>
+                            </a>
                             <a href="#contact">
-                            <li class="nav-contact">Contact</li>
+                                <li class="nav-contact">Contact</li>
                             </a>
                         </ul>
                     </nav>
@@ -74,23 +75,35 @@
                 <div class="glide__track" data-glide-el="track">
                     <ul class="glide__slides">
                         <li class="glide__slide" data-aos="fade-up" data-aos-delay="50" data-aos-easing="ease-in-out">
-                           <div class="image-frame">
-                               <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                            <div class="image-frame">
+                                <img src="./img/memory-game.png" alt="memory-game" class="memory-game">
+                            </div>
+                            <div class="image-info left">
+                                <h3>This is placeholder</h3>
                             </div>
                         </li>
                         <li class="glide__slide" data-aos="fade-up" data-aos-delay="250" data-aos-easing="ease-in-out">
-                          <div class="image-frame">
-                              <img src="./img/react-cart.png" alt="react-cart">
+                            <div class="image-frame">
+                                <img src="./img/react-cart.png" alt="react-cart">
+                            </div>
+                            <div class="image-info right">
+                                <h3>This is placeholder</h3>
                             </div>
                         </li>
                         <li class="glide__slide " data-aos="fade-up" data-aos-delay="450" data-aos-easing="ease-in-out">
-                           <div class="image-frame">
-                               <img src="./img/react-movie.png" alt="react-movie">
+                            <div class="image-frame">
+                                <img src="./img/react-movie.png" alt="react-movie">
+                            </div>
+                            <div class="image-info right">
+                                <h3>This is placeholder</h3>
                             </div>
                         </li>
                         <li class="glide__slide " data-aos="fade-up" data-aos-delay="550" data-aos-easing="ease-in-out">
                             <div class="image-frame">
                                 <img src="./img/react-library.png" alt="memory-game" class="memory-game">
+                            </div>
+                            <div class="image-info right">
+                                <h3>This is placeholder</h3>
                             </div>
                         </li>
 
@@ -121,14 +134,14 @@
                 <h3>message me</h3>
                 <input type="text" name="username" id="username" placeholder="NAME">
                 <input type="text" name="email" id="email" placeholder="EMAIL">
-                <input type="text" name="message" id="message" id ="message" placeholder="MESSAGE">
+                <input type="text" name="message" id="message" id="message" placeholder="MESSAGE">
                 <div id="send-message">SEND</div>
             </div>
         </div>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="https://kit.fontawesome.com/6f955fdec6.js"></script>
-        <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
-        <script src="/js/zenscroll-min.js"></script>
+        <script src="./node_modules/@glidejs/glide/dist/glide.min.js"></script>
+        <script src="./js/zenscroll-min.js"></script>
         <script src="./js/site.js"></script>
 </body>
 
