removed extra folders

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <title>MD ARIF HASAN || ACTIVELY LOOKING FOR A FULL TIME JOB &#x1F60E </title>
     <link href='https://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet'>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
+    <link rel="stylesheet" href="css/glide.core.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css">
+    <link rel="stylesheet" href="css/glide.theme.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -140,7 +140,7 @@
         </div>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="https://kit.fontawesome.com/6f955fdec6.js"></script>
-        <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
+        <script src="js/glide.min.js"></script>
         <script src="js/zenscroll-min.js"></script>
         <script src="js/site.js"></script>
 </body>
