Changed resume link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<ul class="navbar-nav">
 								<li><a href="#home">Home</a></li>
 								<li><a href="#portfolio">Portfiolio</a></li>
-								<li><a target="_blank" href="https://drive.google.com/open?id=1-ZmsHaoB8KoVUx5YPFBoxcpzePXNlzcq">Resume</a></li>
+								<li><a target="_blank" href="https://docs.google.com/document/d/1GnsdmerPopPIf8OwtZLlOfVWGiJn1HgJSm_0nGsYdAs/edit?usp=sharing">Resume</a></li>
 								<li><a href="#contact">Contact</a></li>
 
 							</ul>
